--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -146,6 +146,7 @@
   height: 30px;
   border-radius: 12px;
   background: var(--text-color);
+  border: 2px solid var(--list-background);
   &__mob {
     display: none;
   }
@@ -155,22 +156,21 @@
     display: none;
   }
   &__item {
-    color: #aaaaaa;
     font-size: 16px;
   }
 }
 
-@mixin sidebar() {
-  position: absolute;
+@mixin navbarCont($x) {
+  position: fixed;
+  top: 62px;
   right: 0;
-  width: 60%;
-  background: var(--list-background);
-  color: var(--text-color);
-  min-height: 100%;
-  transition: all 0.75s;
+  height: calc(100% - 62px);
+  width: 65%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.75s;
+  transform: translatex($x);
 }
 
 @media screen and (max-width: 1080px) {
@@ -197,6 +197,7 @@
     display: flex;
     justify-content: space-between;
     min-height: 60px;
+    z-index: 100;
 
     &__search {
       width: 100px;
@@ -220,25 +221,21 @@
     }
 
     &__navbar-container {
-      position: fixed;
-      width: 100%;
-      height: calc(100vh - 62px);
-      top: 62px;
-      right: 0;
+      @include navbarCont(100%);
+      &__active {
+        @include navbarCont(0);
+      }
     }
 
     &__navbar {
-      @include sidebar;
-      transform: translateX(100%);
+      width: 100%;
+      height: 100%;
+      background: var(--list-background);
+      color: var(--text-color);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       overflow-y: scroll;
-      padding: 20px 0;
-
-      &__active {
-        @include sidebar;
-        overflow-y: scroll;
-        height: 100%;
-        padding: 20px 0;
-      }
 
       &__options {
         margin: 20px auto;
@@ -280,16 +277,14 @@
 
       &__blur {
         z-index: 15;
-        position: absolute;
-
-        left: 0;
 
         display: block;
-        width: 40%;
-
+        position: fixed;
+        left: 0;
+        width: 35%;
         backdrop-filter: blur(2px);
-        transition: all 0.75s;
-        min-height: 100%;
+        transition: all 1s;
+        height: 100%;
       }
     }
 
@@ -393,7 +388,6 @@
       display: block;
     }
     &__item {
-      color: #aaaaaa;
       font-size: 16px;
     }
   }
